--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
-<html lang="en"><head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body{
+	background-image: url("mars.gif");
+    background-position: center;
+    background-size: cover;
+}
+#myCanvas
+{
+	border-width:10px;
+	background-color: white; 
+	border-style:ridge;
+}
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+h1,h4
+{
+	color: white !important;
+}
+</style>		
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<title>Moving Rover On</title>
 </head>
-<body class="body_background">
+<body onload="add()"> 
+<center>
+<h1>Moving Rover On Mars</h1>
+<canvas id="my_Canvas" width="800" height="600"></canvas>
+<h4>
+	<b class="text-danger">NOTE : </b> IF ROVER IS NOT VISIABLE PRESS ANY ARROW KEY
+</h4>
 
-    <center>
-<canvas id="myCanvas" width="1000" height="600"></canvas>
-<br> <br>
-
-<input id="color" type="text" placeholder="Enter the color">
-<input id="width" type="text" placeholder="Enter the width ">
-<button onclick="clearCanvas()" id="clearCanvas" type="button">Clear Canvas</button>
-
-
-    </center>
-
-    <script src="main.js"></script>
-    
-
-</body></html>
+</center>
+<script src="main.js">
+</script>
+</body>
+</html>
